# xgboost-survival-embeddings

./: pyproject.toml
tests/: test_metrics.py
xgbse/: _debiased_bce.py  _kaplan_neighbors.py  _stacked_weibull.py  converters.py  non_parametric.py
