[tool.poetry]
name = "xgbse"
version = "0.2.3"
description = ""
authors = ["marc <mpucheniubo@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
xgboost = "^1.4.0"
numpy = "<1.24.0"
scikit-learn = "^0.22.2"
pandas = "^1.0.0"
joblib = "^0.15.1"
lifelines = "^0.25.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
mkdocstrings = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

