[tool.poetry]
name = "xgbse"
version = "0.2.4a0"
description = ""
authors = ["marc <mpucheniubo@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
pandas = "^2.0.2"
joblib = "^1.1.1"
lifelines = "^0.27.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
mkdocstrings = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

